@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.4 2005/02/23 14:45:25 agc Exp $
+$NetBSD: distinfo,v 1.5 2005/10/20 17:25:38 abs Exp $
 
-SHA1 (Archive-Zip-1.14.tar.gz) = e4eb9af1540039ce60af9be35d27ba354bad0228
-RMD160 (Archive-Zip-1.14.tar.gz) = 302c15961268ebb173a5133fbb5c3f17d4144642
-Size (Archive-Zip-1.14.tar.gz) = 110330 bytes
+SHA1 (Archive-Zip-1.16.tar.gz) = 5eadeb821341e8491014003694aeb4380f3f39ae
+RMD160 (Archive-Zip-1.16.tar.gz) = aeacb97732dd13138405db49acbc851448863f58
+Size (Archive-Zip-1.16.tar.gz) = 111336 bytes
